feat: add package publising

--- a/src/package.json
+++ b/src/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "viem",
-  "description": "TypeScript Interface for Ethereum",
-  "version": "2.21.57",
+  "name": "@elpiarthera/viem",
+  "description": "TypeScript Interface for Arthera",
+  "version": "2.21.58",
   "type": "module",
   "main": "./_cjs/index.js",
   "module": "./_esm/index.js",
   "types": "./_types/index.d.ts",
   "typings": "./_types/index.d.ts",
   "sideEffects": false,
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "files": [
     "*",
     "!**/*.bench.ts",
@@ -151,7 +154,7 @@
   },
   "license": "MIT",
   "homepage": "https://viem.sh",
-  "repository": "wevm/viem",
+  "repository": "https://github.com/elpiarthera/viem.git",
   "authors": ["awkweb.eth", "jxom.eth"],
   "funding": [
     {
@@ -159,5 +162,5 @@
       "url": "https://github.com/sponsors/wevm"
     }
   ],
-  "keywords": ["eth", "ethereum", "dapps", "wallet", "web3", "typescript"]
+  "keywords": ["eth", "ethereum", "dapps", "wallet", "web3", "typescript", "arthera"]
 }
